bugfix phasepref